[package]
name = "ms_renderer"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.23"
image = { version = "0.24.5", features = ["webp-encoder"] }
ureq = "2.6.2"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
gif = "0.12.0"