[package]
name = "ms_renderer"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.26"
image = { version = "0.24.6", features = ["webp-encoder"] }
ureq = "2.7.1"
serde_json = "1.0.99"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"
gif = "0.12.0"
