[package]
name = "ms_renderer"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
serenity = { version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.26"
image = { version = "0.25.6", features = ["webp", "avif"] }
ureq = "2.12.1"
serde_json = "1.0.99"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "2.0.12"
gif = "0.13.1"
